--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.1'
 
 services:
+  kc_task:
+    image: jboss/keycloak
+    container_name: kc_task
+    ports:
+      - 8180:8080
+    environment:
+      - KEYCLOAK_USER=admin
+      - KEYCLOAK_PASSWORD=admin
+      - KEYCLOAK_IMPORT=/realm-task_tracker.json
+    volumes:
+      - ./docker/keycloak/realm-task_tracker.json:/realm-task_tracker.json
+    networks:
+      - backend
+
   server_db:
     image: postgres
     container_name: server_db
@@ -13,21 +27,24 @@ services:
     networks:
       - backend
 
-#  server:
-#    image: openjdk:11
-#    volumes:
-#      - ./server/target/server-1.0-SNAPSHOT.jar:/server.jar
-#    command: java -jar server.jar
-#    environment:
-#      - SERVER_DB_URL=jdbc:postgresql://server_db:5432/postgres
-#      - SERVER_DB_USER=postgres
-#      - SERVER_DB_PASSWORD=postgres
-#    ports:
-#      - "8080:8080"
-#    networks:
-#      - backend
-#    depends_on:
-#      - server_db
+  server:
+    image: openjdk:11
+    container_name: server
+    volumes:
+      - ./server/target/server-1.0-SNAPSHOT.jar:/server.jar
+    command: java -jar server.jar
+    environment:
+      - SERVER_DB_URL=jdbc:postgresql://server_db:5432/postgres
+      - SERVER_DB_USER=postgres
+      - SERVER_DB_PASSWORD=postgres
+      - AUTH_SERVER=http://kc_task:8080
+    ports:
+      - "8080:8080"
+    networks:
+      - backend
+    depends_on:
+      - server_db
+      - kc_task
 
 networks:
   backend:
